# horton-desktop

./: README.md  UPDATE_LOG.md  index.html  package.json
.github/ISSUE_TEMPLATE/: bug_report.yml  build_error_report.yml  docmentation_issue.yml  feature_request.yml  security.yml
.github/workflows/: release.yml
casks/: hortondesktop.rb
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: conf.rs  main.rs  utils.rs
src-tauri/src/app/: cmd.rs  horton.rs  menu.rs  mod.rs  setup.rs  window.rs
src-tauri/src/scripts/: auth.missouri-public-notices.js  cmd.js  missouri-public-notice.notice.js  missouri-public-notice.notice.pdf.js
src/components/SwitchOrigin/: index.tsx
